--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="search">
                 <form action="javascript:search()" method="post">
-                    <input type="text" name="q" id="search_input" onsubmit="search">
+                    <input type="text" name="q" id="search_input" onsubmit="search" placeholder="Search">
                 </form>
             </div>
         </nav>
