Added movie detail page

--- a/public/movie.html
+++ b/public/movie.html
@@ -7,7 +7,7 @@
     <title>Kaxetinet</title>
     <link rel="shortcut icon" href="src/images/favicon.ico">
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="src/css/movie.css">
 </head>
 <body>
     <header>
@@ -24,10 +24,23 @@
         </nav>
     </header>
 
-    <section id="movies">
-    </section>
+    <div id="cover_image"></div>
+
+    <div class="container">
+        <section id="movie">
+        </section>
+        
+        <section id="seats">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus corporis est ipsam, quibusdam quod dolore quisquam vel quis aliquid doloribus? Animi facilis consequuntur neque! Dolorem sapiente nostrum tempora minus repellat?
+        </section>
+
+        <section id="related_movies">
+            <h2>Related Movies</h2>
+            <div id="movies"></div>
+        </section>
+    </div>
     
     <script src="src/js/script.js"></script>
-    <script src="src/js/index.js"></script>
+    <script src="src/js/movie.js"></script>
 </body>
 </html>
