--- a/public/movie.html
+++ b/public/movie.html
@@ -31,7 +31,105 @@
         </section>
         
         <section id="seats">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus corporis est ipsam, quibusdam quod dolore quisquam vel quis aliquid doloribus? Animi facilis consequuntur neque! Dolorem sapiente nostrum tempora minus repellat?
+            <div class="main-container">
+                <div class="head">
+                    <div class="movie__title">
+                        <div class="movie-info">
+                            <h1 class="title"></h1>
+                            <div class="title-info">
+                                <h6>Real 3D</h6>
+                                <h6>12+</h6>
+                            </div>
+                        </div>
+
+                        <h4 class="cinema-id">Amirani Cinema</h4>
+                        <h3 class="movie-date">Tonight, 19:40</h3>
+                    </div>
+                </div>
+
+                <div class="seat-selection-container">
+                    <div class="screen"></div>
+
+                    <div class="seats-container">
+                        <div class="row">
+                            <p>1</p>
+                            <div class="seat">1</div>
+                            <div class="seat">2</div>
+                            <div class="seat">3</div>
+                            <div class="seat">4</div>
+                            <div class="seat">5</div>
+                            <div class="seat">6</div>
+                            <div class="seat desabled-seat">7</div>
+                            <div class="seat desabled-seat">8</div>
+                            <div class="seat">9</div>
+                            <div class="seat">10</div>
+                            <p>1</p>
+                        </div>
+                        <div class="row">
+                            <p>2</p>
+                            <div class="seat">1</div>
+                            <div class="seat desabled-seat">2</div>
+                            <div class="seat desabled-seat">3</div>
+                            <div class="seat desabled-seat">4</div>
+                            <div class="seat">5</div>
+                            <div class="seat">6</div>
+                            <div class="seat">7</div>
+                            <div class="seat">8</div>
+                            <div class="seat">9</div>
+                            <div class="seat">10</div>
+                            <p>2</p>
+                        </div>
+                        <div class="row">
+                            <p>3</p>
+                            <div class="seat">1</div>
+                            <div class="seat">2</div>
+                            <div class="seat">3</div>
+                            <div class="seat vip-seat desabled-seat">4</div>
+                            <div class="seat vip-seat desabled-seat">5</div>
+                            <div class="seat vip-seat">6</div>
+                            <div class="seat vip-seat">7</div>
+                            <div class="seat">8</div>
+                            <div class="seat">9</div>
+                            <div class="seat">10</div>
+                            <p>3</p>
+                        </div>
+                        <div class="row">
+                            <p>4</p>
+                            <div class="seat">1</div>
+                            <div class="seat">2</div>
+                            <div class="seat">3</div>
+                            <div class="seat vip-seat">4</div>
+                            <div class="seat vip-seat">5</div>
+                            <div class="seat vip-seat">6</div>
+                            <div class="seat vip-seat">7</div>
+                            <div class="seat">8</div>
+                            <div class="seat">9</div>
+                            <div class="seat">10</div>
+                            <p>4</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer">
+                    <div class="seat-info">
+                        <div class="standard">
+                            <div class="standard__circle circle"></div>
+                            <p>Standard: 15 ₾</p>
+                        </div>
+                        <div class="vip">
+                            <div class="vip__circle circle"></div>
+                            <p>VIP: 25 ₾</p>
+                        </div>
+                    </div>
+
+                    <div class="total-cost-info">
+                        <div>Total cost: </div>
+                        <div class="total-cost">0</div>
+                        <span>₾</span>
+                    </div>
+                    <button class="square-btn">Check out</button>
+                </div>
+            </div>
         </section>
 
         <section id="related_movies">
