--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Kaxetinet</title>
+    <meta name="title" content="Kaxetinet">
+    <meta name="description" content="Buy Tickets Online">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://front-homework-3.web.app/">
+    <meta property="og:title" content="Kaxetinet">
+    <meta property="og:description" content="Buy Tickets Online">
+    <meta property="og:image" content="https://front-homework-3.web.app/src/images/kaxetinet_logo.png">
+
     <link rel="shortcut icon" href="src/images/favicon.ico">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/index.css">
